--- a/css/main.css
+++ b/css/main.css
@@ -152,10 +152,10 @@ input[type="submit"]:hover {
     margin-top: 10px;
     padding: 1px;
     letter-spacing: 1.5px;
-    font-weight: bolder;
+    font-weight: 500;
     width: 100%;
     border-radius: 25px;
-    font-size: 15px;
+    font-size: 12px;
 }
 p {
     margin-left: 20px;
