--- a/css/main.css
+++ b/css/main.css
@@ -158,3 +158,14 @@ input[type="submit"]:hover {
 p {
     margin-left: 20px;
 }
+select {
+    width: 300px;
+    background: whitesmoke;
+    border: 1px grey solid;
+    outline: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    color: grey;
+    font-size: 14px;
+    margin: 5px;
+}
