--- a/css/main.css
+++ b/css/main.css
@@ -201,3 +201,14 @@ select {
 .result tr:nth-child(even) {
     background-color: #dddddd;
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
