--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Maven+Pro&display=swap');
 * {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Maven Pro', sans-serif;
 }
 body {
     margin: 0;
